Fix: overflow should be hidden during transitions only, otherwise long dropdown menus can be truncated

--- a/src/js/frontend/jsx/App.less
+++ b/src/js/frontend/jsx/App.less
@@ -1,7 +1,6 @@
 @import "../../backend/jsx/mixins";
 
 .app {
-  overflow: hidden;
   .mainFrontendFont();
   position: relative;
 
